--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lintf": "eslint --ext .js,.vue --ignore-path .gitignore --fix .",
     "test": "jest"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@nuxtjs/axios": "^5.9.7",
+    "async": "^3.2.0",
     "nuxt": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0",
     "vue-scrollto": "^2.17.1",
